peac_dev/force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Programs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>