peac_dev/force-app/main/default/objects/Program__c/fields/Brand_Names__c.field-meta.xml
<CustomField>
    <fullName>Brand_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>