peac_dev/force-app/main/default/objects/Program__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEG</fullName>
            </value>
            <value>
                <fullName>DLG</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>HKF</fullName>
            </value>
            <value>
                <fullName>Snap</fullName>
            </value>
            <value>
                <fullName>WS</fullName>
            </value>
            <value>
                <fullName>CVG</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>IFP</fullName>
            </value>
            <value>
                <fullName>No Doc Fee</fullName>
            </value>
            <value>
                <fullName>Franchise EF</fullName>
            </value>
            <value>
                <fullName>Franchise Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>