peac_dev/force-app/main/default/objects/Program__c/fields/Date_of_last_Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_Credit_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of last Credit Approval</label>
    <type>Date</type>
</CustomField>