peac_dev/force-app/main/default/objects/Program__c/fields/Deferrals__c.field-meta.xml
<CustomField>
    <fullName>Deferrals__c</fullName>
    <label>Deferrals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>