peac_dev/force-app/main/default/objects/Program__c/fields/Down_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Percent__c</fullName>
    <label>Down Payment %</label>
    <precision>16</precision>
    <scale>14</scale>
    <type>Percent</type>
</CustomField>