peac_dev/force-app/main/default/objects/Program__c/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <label>Group Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>