peac_dev/force-app/main/default/objects/Program__c/fields/Group_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Code Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>