peac_dev/force-app/main/default/objects/Program__c/fields/Maximum_Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Financed_Amount__c</fullName>
    <label>Maximum Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>