peac_dev/force-app/main/default/objects/Program__c/fields/Maximum_Margin__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Margin__c</fullName>
    <label>Maximum Margin</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>