peac_dev/force-app/main/default/objects/Program__c/fields/Maximum_Term__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Term__c</fullName>
    <label>Maximum Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>