peac_dev/force-app/main/default/objects/Program__c/fields/Minimum_Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Financed_Amount__c</fullName>
    <label>Minimum Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>