peac_dev/force-app/main/default/objects/Program__c/fields/Minimum_Margin__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Margin__c</fullName>
    <label>Minimum Margin</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>