peac_dev/force-app/main/default/objects/Program__c/fields/PG_Required__c.field-meta.xml
<CustomField>
    <fullName>PG_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG Required</label>
    <type>Checkbox</type>
</CustomField>