peac_dev/force-app/main/default/objects/Program__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>