peac_dev/force-app/main/default/objects/Program__c/fields/Primary_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Channel__c</fullName>
    <label>Primary Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNAP</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>