peac_dev/force-app/main/default/objects/Program__c/fields/Private_Label__c.field-meta.xml
<CustomField>
    <fullName>Private_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Label</label>
    <type>Checkbox</type>
</CustomField>