peac_dev/force-app/main/default/objects/Program__c/fields/Program_Owner__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>