peac_dev/force-app/main/default/objects/Program__c/fields/Rate_Sheet_s__c.field-meta.xml
<CustomField>
    <fullName>Rate_Sheet_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Sheet(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>