peac_dev/force-app/main/default/objects/Program__c/fields/Subsidized__c.field-meta.xml
<CustomField>
    <fullName>Subsidized__c</fullName>
    <label>Subsidized?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>