peac_dev/force-app/main/default/objects/Program__c/fields/Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Subsidy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subsidy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>