peac_dev/force-app/main/default/objects/Program__c/fields/Time_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Business__c</fullName>
    <label>Time in Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>