peac_dev/force-app/main/default/objects/Program__c/fields/Variable_Payments__c.field-meta.xml
<CustomField>
    <fullName>Variable_Payments__c</fullName>
    <label>Variable Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>