peac_dev/force-app/main/default/objects/Program__c/fields/Vendor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Relationship__c</fullName>
    <label>Vendor Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>