peac_dev/force-app/main/default/objects/Program__c/fields/Vendor_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Subsidy__c</fullName>
    <label>Vendor Subsidy</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>