peac_dev/force-app/main/default/objects/Program__c/fields/VPA_Signed__c.field-meta.xml
<CustomField>
    <fullName>VPA_Signed__c</fullName>
    <label>VPA Signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>