peac_dev/force-app/main/default/objects/Program__c/fields/Years_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Years_Licensed__c</fullName>
    <label>Years Licensed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>