peac_dev/force-app/main/default/objects/Program__c/recordTypes/Offers.recordType-meta.xml
<RecordType>
    <fullName>Offers</fullName>
    <active>true</active>
    <description>Offers that are given by a Dealer, Manufacturer or Marlin that would effect the pricing structure of an application</description>
    <label>Offers</label>
</RecordType>