peac_dev/force-app/main/default/objects/Program__c/recordTypes/Programs.recordType-meta.xml
<RecordType>
    <fullName>Programs</fullName>
    <active>true</active>
    <description>Programs offered by a Dealer, Franchisor or Manufacturer that would affect the pricing of an application</description>
    <label>Programs</label>
</RecordType>